# PixelArtEditor

./: .gitmodules  CMakeLists.txt
include/: application.h  button.h  editor.h  inputbox.h  mainmenu.h  pixel.h
src/: application.c  button.c  editor.c  inputbox.c  main.c  mainmenu.c
